add line chart and hover effects for chart 3

--- a/index.css
+++ b/index.css
@@ -9,17 +9,17 @@
 }
 
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 100%;
-  border-radius: 5px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+	transition: 0.3s;
+	width: 100%;
+	border-radius: 5px;
 	border-style: solid;
-  border-width: thin;
+	border-width: thin;
 	border-color: #ced4da;
 }
 
 .container {
-  padding: 2px 16px;
+	padding: 2px 16px;
 }
 
 span.text1 {
