--- a/index.css
+++ b/index.css
@@ -31,6 +31,25 @@
   pointer-events: none;
 }
 
+#year2017, #year2018, #year2019, #year2020, #year2021, #year2022 {
+	margin-left: 1.5;
+	margin-right: 1.5;
+	padding: 6px;
+	border: none;
+	border-radius: 5px;
+	width: 5%;
+	margin-top: 2%;
+	font-weight: bold;
+	padding: 5px;
+	color: white;
+	font-size: 1rem;
+	background-color: #ED6A2C;
+}
+
+#year2017:hover, #year2018:hover, #year2019:hover, #year2020:hover, #year2021:hover, #year2022:hover {
+    opacity: 0.6;
+}
+
 span.text1 {
 	/* float: right;
 	text-align: justify;
@@ -47,8 +66,4 @@ span.text2 {
 
 span.text3 {
 	text-align: justify;
-}
-
-#chart1 {
-	width: 45%;
 }
