--- a/index.css
+++ b/index.css
@@ -8,6 +8,103 @@
 	font-family: 'Arial', sans-serif;
 }
 
+header {
+  position:relative;
+  overflow:hidden;
+  display:flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: flex-start;
+  align-content: flex-start;
+  height:50vw;
+  min-height:350px;
+  max-height:350px;
+  min-width:300px;
+  color:#F7F9FD;
+	font-size: 20px;
+	text-align:center;
+	padding-top: 90px;
+	padding-bottom: 90px;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-bottom: 20px;
+	margin-top: -50px;
+}
+
+header:after {
+  content:"";
+  width:100%;
+  height:100%;
+  position:absolute;
+  bottom:0;
+  left:0;
+  z-index:-1;
+ 	background: linear-gradient(to bottom, rgba(0,0,0,0.12) 40%,rgba(27,32,48,1) 100%);
+}
+
+header:before {
+  content:"";
+  width:100%;
+  height:200%;
+  position:absolute;
+  top:0;
+  left:0;
+  -webkit-backface-visibility: hidden;
+  -webkit-transform: translateZ(0); backface-visibility: hidden;
+  scale(1.0, 1.0);
+  transform: translateZ(0);
+  background:#1B2030 url(images/somalia_illustration.png) 50% 0 no-repeat;
+  background-size:100%;
+  background-attachment:fixed;
+  animation: grow 360s  linear 10ms infinite;
+  transition:all 0.4s ease-in-out;
+  z-index:-2
+}
+
+@keyframes grow {
+  0% { transform: scale(1) translateY(0px)}
+  50% { transform: scale(1.2) translateY(-400px)}
+}
+
+h1 {
+	margin-top: 150px;
+}
+
+h1:after {
+	content: '';
+	position: absolute;
+	display: inline-block;
+  height: 1em;
+  width: 58%;
+  border-bottom: 1px solid;
+  margin-top: 1%;
+	left: 21%;
+  opacity: 0;
+	animation: underlineEffect 4s forwards;
+	transform: scale(0,1);
+}
+
+@keyframes underlineEffect {
+	0% {
+		opacity: 0;
+		transform: scale(0,1);
+	}
+
+	100% {
+		opacity: 1;
+		transform: scale(1);
+	}
+}
+
+/* :hover:after {
+	opacity: 1;
+	transform: scale(1);
+} */
+
+body {
+  background-color: #f7f9fd;
+}
+
 .card {
 	box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
 	transition: 0.3s;
@@ -17,6 +114,7 @@
 	border-width: thin;
 	border-color: #ced4da;
 	margin-left: 35px;
+	background-color: #fff;
 }
 
 .container {
@@ -45,10 +143,12 @@
 	color: white;
 	font-size: 1rem;
 	background-color: #ED6A2C;
+	transition-duration: 0.3s;
 }
 
 #year2017:hover, #year2018:hover, #year2019:hover, #year2020:hover, #year2021:hover, #year2022:hover {
     opacity: 0.6;
+
 }
 
 span.text1 {
@@ -70,6 +170,11 @@ span.text3 {
 }
 
 footer {
-	padding-top: 40px;
-	padding-bottom: 10px;
+	font-size: 18px;
+	padding-top: 90px;
+	padding-bottom: 90px;
+	margin-left: -50px;
+	margin-right: -50px;
+	margin-bottom: -50px;
+	margin-top: 20px
 }
