--- a/index.css
+++ b/index.css
@@ -130,7 +130,7 @@ body {
   pointer-events: none;
 }
 
-#year2017, #year2018, #year2019, #year2020, #year2021, #year2022 {
+.year-btn {
 	margin-left: 1.5;
 	margin-right: 1.5;
 	padding: 6px;
@@ -146,7 +146,7 @@ body {
 	transition-duration: 0.3s;
 }
 
-#year2017:hover, #year2018:hover, #year2019:hover, #year2020:hover, #year2021:hover, #year2022:hover {
+.year-btn:hover {
     opacity: 0.6;
 
 }
