--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@ header:before {
   left:0;
   -webkit-backface-visibility: hidden;
   -webkit-transform: translateZ(0); backface-visibility: hidden;
-  scale(1.0, 1.0);
+  scale: (1.0, 1.0);
   transform: translateZ(0);
   background:#1B2030 url(images/somalia_illustration.png) 50% 0 no-repeat;
   background-size:100%;
@@ -102,7 +102,7 @@ h1:after {
 } */
 
 body {
-  background-color: #f7f9fd;
+  background-color: #FAF5E4;
 }
 
 .card {
@@ -176,8 +176,10 @@ span.text2 {
 	margin-top: -15%; */
 }
 
-.text3 p {
-margin: 0 auto
+.text3  {
+margin: auto;
+padding-right: 100px;
+text-align: right;
 }
 
 #chart1 {
