--- a/index.css
+++ b/index.css
@@ -96,13 +96,9 @@ h1:after {
 	}
 }
 
-/* :hover:after {
-	opacity: 1;
-	transform: scale(1);
-} */
-
 body {
-  background-color: #FAF5E4;
+  background-color: #FFFFFF;
+	overflow-x: hidden;
 }
 
 .card {
@@ -117,23 +113,48 @@ body {
 	background-color: #fff;
 }
 
+#container0, #container1, #container4 {
+	padding: 40px 80px;
+	text-align: justify;
+}
+
+#container2 {
+	padding: 40px 80px;
+	text-align: justify;
+}
+
 #container3 {
-	padding: 2px 16px;
+	padding: 40px 80px;
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	grid-gap: 20px;
 	text-align: center;
 }
 
+#chart1 {
+	padding-bottom: 0.5rem;
+	clear: both;
+	padding-bottom: 1.5rem;
+	text-align: center;
+	/* position: absolute; */
+}
+
+#chart2 {
+	text-align: right;
+	margin-left: 35%;
+	scale: 0.8;
+}
+
+#chart3 {
+	text-align: left;
+	scale: 0.8;
+}
+
 h2 {
 	text-align: center;
 }
-.container {
-	padding: 30px 20px;
-}
 
 .map-tooltip {
-	position: absolute;
 	background-color: #fff;
 	padding: 5px;
 	font-size: 12px;
@@ -141,50 +162,51 @@ h2 {
 	pointer-events: none;
 }
 
-.year-btn {
+#buttons {
+	text-align: center;
+}
+
+button {
 	margin-left: 1.5;
 	margin-right: 1.5;
-	padding: 6px;
+	padding: 5px;
 	border: none;
 	border-radius: 5px;
-	width: 5%;
-	margin-top: 2%;
+	width: 80px;
+	margin-top: 5px;
 	font-weight: bold;
-	padding: 5px;
 	color: white;
 	font-size: 1rem;
 	background-color: #ED6A2C;
 	transition-duration: 0.3s;
 }
 
-.year-btn:hover {
-    opacity: 0.6;
-
+button:hover {
+  opacity: 0.6;
 }
 
-span.text1 {
-	/* float: right;
-	text-align: justify;
-	width: 45%;
-	margin-top: -25%; */
+.background, .text1, .text4 {
+	font-size: 18px;
 }
 
-span.text2 {
-	/* float: left;
+.text2  {
+	text-align: left;
 	text-align: justify;
-	width: 45%;
-	margin-top: -15%; */
+	font-size: 18px;
 }
 
 .text3  {
-margin: auto;
-padding-right: 100px;
-text-align: right;
+	/* margin: auto;
+	padding-right: 100px; */
+	text-align: right;
+	text-align: justify;
+	font-size: 18px;
 }
 
-#chart1 {
-	width: 45%;
+.hyperlinks {
+	color: black;
 }
+
 footer {
 	font-size: 18px;
 	padding-top: 90px;
@@ -192,5 +214,5 @@ footer {
 	margin-left: -50px;
 	margin-right: -50px;
 	margin-bottom: -50px;
-	margin-top: 20px
+	margin-top: 20px;
 }
