--- a/index.css
+++ b/index.css
@@ -132,11 +132,11 @@ body {
 }
 
 #chart1 {
+	position: relative;
 	padding-bottom: 0.5rem;
 	clear: both;
 	padding-bottom: 1.5rem;
 	text-align: center;
-	/* position: absolute; */
 }
 
 #chart2 {
@@ -155,11 +155,15 @@ h2 {
 }
 
 .map-tooltip {
-	background-color: #fff;
-	padding: 5px;
-	font-size: 12px;
-	border: 1px solid #ccc;
-	pointer-events: none;
+	position: absolute;
+  pointer-events: none;
+  background-color: white;
+  border: solid 1px #ccc;
+  padding: 7px;
+  font-size: 14px;
+  opacity: 0;
+  transition: opacity 0.3s;
+  z-index: 10;
 }
 
 #buttons {
