--- a/index.css
+++ b/index.css
@@ -180,7 +180,7 @@ button {
 	font-weight: bold;
 	color: white;
 	font-size: 1rem;
-	background-color: #ED6A2C;
+	background-color: #8DB9B8;
 	transition-duration: 0.3s;
 }
 
