--- a/index.css
+++ b/index.css
@@ -115,7 +115,7 @@ body {
 	border-style: solid;
 	border-width: thin;
 	border-color: #ced4da;
-	margin-left: 35px;
+	margin-left: 2%;
 	background-color: #fff;
 }
 
